   behavior when a file with the new name already exists (Geo Carncross).

 - Improved hashing on 64-bit machines.

 - The physical pathname format has changed from [device:][[//hostname]/]...
   to [[device:[//hostname]]/]... The reason is that this allows proper
   parsing of Unix pathnames such as "//usr/".

 - In interpreted functions, blocks are only created when used. The current
   algorithm for detecting unused blocks is inefficient, with a performance
   penalty 2^{# unused blocks}, but this seems to pay off when running the
   interpreted code, due to decreased consing
	> (defun foo () )         
	FOO
	> (time (dotimes (i 100000) (foo)))
	real time : 0.045 secs
	run time  : 0.048 secs
	gc count  : 1 times
	consed    : 160 bytes
   Formerly, this would cons 3200192 bytes.

 - When compiling object files that will form part of either a unified FASL or
   of a library (static or dynamically linked), there used to be name
   collisions between the initialization functions of different modules. Now
   ECL uses a cleverer hashing algorithm to name these functions, storing the
   key in a string in the object file, which is later searched before linking
   the file.  Currently the hash key only depends on the pathname of the source
   file and the universal time at which is compiled, hence there may still be
   collisions between files compiled on different machines. In short: you should
   only worry if you regularly use the function C::BUILD.

 - Improved hashing of unicode strings.

* CLOS:

 - When caching generic function calls, ECL now uses a thread-local hash table
   instead of one hash table per generic function.

* Bugs fixed:

 - The bignums produced by RANDOM did not have enough random bits.

 - ECL formerly accepted spaces between the comma and the @ and . characters
   in expressions like ,@ or ,.

 - Building a statically linked ECL works again.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***