@@ -98,9 +98,7 @@ _hash_equal(int depth, cl_hashkey h, cl_object x)
 		h = _hash_equal(depth, h, x->pathname.directory);
 		h = _hash_equal(depth, h, x->pathname.name);
 		h = _hash_equal(depth, h, x->pathname.type);
-		return _hash_equal(depth, h, x->pathname.name);
-	case t_random:
-		return hash_word(h, x->random.value);
+		return _hash_equal(depth, h, x->pathname.version);
 	case t_bitvector:
 		/* Notice that we may round out some bits. We must do this
 		 * because the fill pointer may be set in the middle of a byte.
@@ -108,6 +106,8 @@ _hash_equal(int depth, cl_hashkey h, cl_object x)
 		 * because otherwise two bit arrays which are EQUAL might
 		 * have different hash keys. */
 		return hash_string(h, x->vector.self.ch, x->vector.fillp / 8);
+	case t_random:
+		return _hash_equal(depth, h, x->random.value);
 	default:
 		return _hash_eql(h, x);
 	}
