@@ -55,6 +55,9 @@ ECL 0.9k:
 
  - Building a statically linked ECL works again.
 
+ - Equal random states now compare properly under EQUALP and their hash keys
+   are also equal.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
